fix:fixing the spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,15 +74,72 @@
 }
 
 .one {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0;
+    min-height: 20vh;
     background-color: rgb(174, 43, 43);
 }
 
-.company {
-    color:rgb(119, 0, 119);
+.center-buttons {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
 }
 
-.right {
+.btn {
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: white;
+    color: rgb(174, 43, 43);
+    border-radius: 8px;
+    font-weight: bold;
+}
+
+.footer {
+    text-align: center;
+    padding: 10px;
+    background: #222;
+    color: white;
+}
+
+section {
+  margin-bottom: 10px;
+  border-radius: 25px;
+  overflow: hidden;
+  height: 160px;
+  padding: 20px 0;
+}
+
+.two {
     display: flex;
-    align-items: center;
+    flex-direction:column;
+
+    background-color: rgb(174, 43, 43);
+}
+
+.center-buttons {
+    flex: 1;
+    display: flex;
     justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.btn {
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: white;
+    color: rgb(174, 43, 43);
+    border-radius: 8px;
+    font-weight: bold;
+}
+
+.footer {
+    text-align: center;
+    padding: 10px;
+    background: #222;
+    color: white;
 }
